tests/cases_invalid/syntax/.expected
error: expected `f32` literal, `false`, `i32` literal, `true`, `u32` literal or identifier
 --> ./cases_invalid/syntax/inner_next_token.shd:5:16
  |
5 |     assigned = ;
  |                ^ here
  |

error: expected identifier
 --> ./cases_invalid/syntax/invalid_ident.shd:1:5
  |
1 | buf 123 = 0;
  |     ^ here
  |

error: expected `f32` literal, `false`, `i32` literal, `true`, `u32` literal or identifier
 --> ./cases_invalid/syntax/many_possible_next_tokens.shd:1:13
  |
1 | buf buffer =
  |             ^ here
  |

error: expected `f32` literal, `false`, `i32` literal, `true`, `u32` literal or identifier
 --> ./cases_invalid/syntax/missing_f32_prefix.shd:1:14
  |
1 | buf buffer = .3;
  |              ^ here
  |

error: expected identifier
 --> ./cases_invalid/syntax/missing_f32_suffix.shd:1:16
  |
1 | buf buffer = 3.;
  |                ^ here
  |

error: expected `f32` literal, `false`, `i32` literal, `true`, `u32` literal or identifier
 --> ./cases_invalid/syntax/missing_whitespace.shd:1:14
  |
1 | buf buffer = 0uv;
  |              ^ here
  |

error: expected `;`
 --> ./cases_invalid/syntax/one_possible_next_token.shd:1:15
  |
1 | buf buffer = 0
  |               ^ here
  |

error: expected `buf`, `fn`, `import`, `init` or `run`
 --> ./cases_invalid/syntax/repeated_root_item.shd:2:1
  |
2 | var
  | ^ here
  |